# ResourceLoader

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md
CMake/: CompilersOptions.cmake  Download_stb.cmake  ProjectTemplate.cmake
Source/: AssetLoader.cpp  CMakeLists.txt  Ressource.hpp
Source/Backup/: InitRessourceImporter.cpp
Sources/: CMakeLists.txt  ClassTypeId.hpp  IImporter.hpp  Importer.hpp  LoaderConfiguration.h.in  Refacto.cpp  Resource.cpp  Resource.hpp  ResourceLoader.hpp  ResourceManager.hpp  ResourceMap.hpp
Tests/Dummy/: CMakeLists.txt  TextureImporter.hpp  main.cpp
Tests/RefactoTest/: CMakeLists.txt  Refacto.cpp
